1. Fix Buttons z-index. 2. Fix dataTable progress bar 3. Set submittedValue to null in all cases

--- a/webapps/jsfComponents/styles/mts/css/buttons.css
+++ b/webapps/jsfComponents/styles/mts/css/buttons.css
@@ -2,7 +2,7 @@ div.eyeline_buttons {
   position: relative;
   left: 0px;
   top: 0px;
-  z-index: 2;
+  /*z-index: 2;*/
 }
 
 table.eyeline_buttons {
@@ -11,7 +11,7 @@ table.eyeline_buttons {
   position: relative;
   height: 30px;
   white-space: nowrap;
-  z-index: 5;
+  /*z-index: 5;*/
 }
 
 table.eyeline_buttons td {
@@ -38,7 +38,7 @@ table.eyeline_buttons_background {
   top: 0px;
   left: 0px;
   height: 30px;
-  z-index: 1;
+  /*z-index: 1;*/
 }
 table.eyeline_buttons_background td{
   background-image: url("../images/smsc_21.jpg")
